--- a/src/components/layout/styles/Layout.scss
+++ b/src/components/layout/styles/Layout.scss
@@ -8,6 +8,10 @@ header.site-header-mobile {
     a.logo img {
         max-height: 50px;
     }
+
+    div.container-fluid {
+        @extend .container;
+    }
 }
 
 footer a img {
