first pass at splitting the PR... did i miss anything?

--- a/src/components/dashboard/main-content/course-enrollments/course-cards/styles/CourseCard.scss
+++ b/src/components/dashboard/main-content/course-enrollments/course-cards/styles/CourseCard.scss
@@ -1,4 +1,5 @@
-@import "~@edx/paragon/scss/edx/theme.scss";
+@import "~@edx/paragon/scss/edx/utilities-only";
+@import "~bootstrap/scss/type";
 
 .course {
   @extend .position-relative;
