--- a/src/components/dashboard/main-content/course-enrollments/styles/CourseSection.scss
+++ b/src/components/dashboard/main-content/course-enrollments/styles/CourseSection.scss
@@ -1,4 +1,4 @@
-@import "~@edx/paragon/scss/edx/theme.scss";
+@import "~@edx/paragon/scss/edx/utilities-only";
 
 .collapsible-trigger {
   @extend .px-0;
