--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-@import "~@edx/paragon/scss/edx/theme.scss";
-@import "~@edx/paragon/scss/edx/fonts.scss"; // Roboto
+@import "~@edx/paragon/scss/edx/theme";
+@import "~@edx/paragon/scss/edx/fonts"; // Roboto
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
