--- a/src/components/dashboard/main-content/course-enrollments/course-cards/email-settings/styles/EmailSettingsModal.scss
+++ b/src/components/dashboard/main-content/course-enrollments/course-cards/email-settings/styles/EmailSettingsModal.scss
@@ -1,4 +1,5 @@
-@import "~@edx/paragon/scss/edx/theme.scss";
+@import "~@edx/paragon/scss/edx/utilities-only";
+@import "~@edx/paragon/scss/core/overrides/buttons";
 
 .modal {
   .modal-title {
