Integrate with Algolia and wire up facet filters

--- a/src/components/dashboard/main-content/course-enrollments/styles/CourseSection.scss
+++ b/src/components/dashboard/main-content/course-enrollments/styles/CourseSection.scss
@@ -1,9 +1,11 @@
 @import "~@edx/paragon/scss/edx/utilities-only";
 
-.collapsible-trigger {
-  @extend .px-0;
-}
+.course-section {
+  .collapsible-trigger {
+    @extend .px-0;
+  }
 
-.collapsible-body {
-  @extend .p-0;
+  .collapsible-body {
+    @extend .p-0;
+  }
 }
