--- a/src/components/search/styles/MobileSearchFilters.scss
+++ b/src/components/search/styles/MobileSearchFilters.scss
@@ -24,28 +24,38 @@
 
   .modal-footer {
     background-color: #f3f3f4;
+
     .btn {
       @extend .flex-grow-1;
     }
   }
 
-  .facet-list .pgn_collapsible {
-    border-radius: 0;
-    border-width: 0 0 1px 0;
-    border-style: solid;
-    border-color: $gray-300;
-  
-    .collapsible-trigger {
+  .facet-list .dropdown {
+    @extend .mb-0;
+
+    .dropdown-toggle {
+      @extend .border-top;
       @extend .py-3;
+      width: 100%;
+      text-align: left;
     }
 
-    .collapsible-body {
-      @extend .border-0;
+    &:first-child {
+      border: none;
+    }
+
+    .dropdown-menu {
       position: relative;
-      top: 0;
-      max-height: unset;
+      width: 100%;
       box-shadow: none;
       overflow-y: unset;
+      max-height: unset;
+      border: none;
+      @extend .border-top;
+    }
+
+    .dropdown-item {
+      padding-left: 30px;
     }
   }
 }
