--- a/src/components/search/styles/SearchResults.scss
+++ b/src/components/search/styles/SearchResults.scss
@@ -7,7 +7,8 @@
     padding: 0;
   }
 
-  .ais-Hits-item {
+  .ais-Hits-item,
+  .skeleton-course-card {
     @extend .col-12;
     @extend .col-sm-6;
     @extend .col-md-4;
