--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,15 @@
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
+
+@import "./components/site-header/styles/Header";
+@import "./components/course/styles/CourseHeader";
+@import "./components/course/styles/CourseSidebar";
+@import "./components/dashboard/main-content/course-enrollments/course-cards/email-settings/styles/EmailSettingsModal";
+@import "./components/dashboard/main-content/course-enrollments/course-cards/styles/CourseCard";
+@import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
+@import "./components/dashboard/sidebar/offers/styles/Offer";
+@import "./components/search/styles/FacetList";
+@import "./components/search/styles/MobileSearchFilters";
+@import "./components/search/styles/SearchCourseCard";
+@import "./components/search/styles/SearchResults";
