--- a/src/components/search/styles/_FacetList.scss
+++ b/src/components/search/styles/_FacetList.scss
@@ -1,5 +1,3 @@
-@import "~@edx/paragon/scss/edx/utilities-only";
-
 .facet-list {
   .dropdown {
     @extend .mb-3;
@@ -9,6 +7,10 @@
       padding-left: 10px;
       padding-right: 10px;
 
+      &:before {
+        border-radius: 0;
+      }
+
       &:after {
         margin-left: 10px;
       }
@@ -16,12 +18,12 @@
 
     .facet-item-label {
       font-weight: normal;
-  
+
       &.is-refined {
         font-weight: 700;
       }
     }
-  
+
     input:focus + .facet-item-label {
       text-decoration: underline;
     }
