--- a/src/index.scss
+++ b/src/index.scss
@@ -13,4 +13,5 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/search/styles/FacetList";
 @import "components/search/styles/SearchCourseCard";
 @import "components/search/styles/SearchResults";
+@import "components/search/styles/MobileSearchFilters";
 @import "components/site-header/styles/Header";
