removing optional from style, fixing tests

--- a/src/components/dashboard/sidebar/styles/_SidebarCard.scss
+++ b/src/components/dashboard/sidebar/styles/_SidebarCard.scss
@@ -3,7 +3,7 @@
         border-top-width: 4px;
         > .card-body {
             > .card-title {
-                @extend .h4 !optional;
+                @extend .h4;
             }
         }
     }
