--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
 @import "./components/dashboard/sidebar/offers/styles/Offer";
 @import "./components/dashboard/sidebar/styles/SidebarCard";
+@import "./components/dashboard/styles/SubscriptionExpirationModal";
 @import "./components/search/styles/FacetList";
 @import "components/search/styles/SearchCourseCard";
 @import "components/search/styles/SearchResults";
