--- a/src/components/dashboard/styles/_SubscriptionExpirationModal.scss
+++ b/src/components/dashboard/styles/_SubscriptionExpirationModal.scss
@@ -1,5 +1,7 @@
-.modal-footer {
-  .btn {
-    @extend .btn-primary;
+.subscription-expiration {
+  .modal-footer {
+    .btn {
+      @extend .btn-primary;
+    }
   }
 }
