--- a/src/components/search/styles/_MobileSearchFilters.scss
+++ b/src/components/search/styles/_MobileSearchFilters.scss
@@ -21,7 +21,7 @@
   }
 
   .modal-footer {
-    background-color: #f3f3f4;
+    background-color: $gray-200;
 
     .btn {
       @extend .flex-grow-1;
