--- a/src/components/site-header/styles/Menu.scss
+++ b/src/components/site-header/styles/Menu.scss
@@ -5,7 +5,7 @@
   position: absolute;
   top: 100%;
   z-index: 10;
-  background: #fff;
+  background: $white;
   min-width: 10rem;
   &.pin-left {
     left: 0;
