--- a/src/components/course/styles/_CourseHeader.scss
+++ b/src/components/course/styles/_CourseHeader.scss
@@ -1,14 +1,3 @@
 .course-header {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,.15);
-
-  .enroll-wrapper {
-    .btn {
-      &:focus:before {
-        @extend .rounded-0;
-      }
-      .enroll-btn-label {
-        font-size: 1.125rem;
-      }
-    }
-  }
+  box-shadow: $box-shadow-sm;
 }
