--- a/src/components/dashboard/sidebar/styles/_SidebarCard.scss
+++ b/src/components/dashboard/sidebar/styles/_SidebarCard.scss
@@ -1,10 +1,9 @@
 .card {
     &.catalog-access-card {
         border-top-width: 4px;
-        > .card-body {
-            > .card-title {
-                @extend .h4;
-            }
+        
+        .card-title { 
+            @extend .h4;
         }
     }
 }
