--- a/src/index.scss
+++ b/src/index.scss
@@ -18,3 +18,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/search/styles/SearchResults";
 @import "./components/search/styles/MobileSearchFilters";
 @import "./components/site-header/styles/Header";
+@import "./components/preview-expand/styles/PreviewExpand";
