fix: move to new brand theme, logo flip, style and misc fixes (#155)
* fix: move to new brand theme, style and misc fixes

* remove @edx/frontend-i18n and @edx/frontend-logging

* update package.json license

* use brand-openedx

* use openedx default colors

* fix dashboard sidebar responsiveness

* updates

* fix css selector

* remove favicon asset

* pin @edx/brand

* clean up enroll btn styles

* change dashboard page title

* change default page title to edX

* use brand colors exported from scss in JS

* remove text-underline and add page min height

* misc fixes

* fix lint

* change to gray-700

* fix color variable

* change Help link style

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,21 @@
-@import "~@edx/paragon/scss/edx/theme";
-@import "~@edx/paragon/scss/edx/fonts"; // Roboto
+@import "@edx/brand/paragon/fonts";
+@import "@edx/brand/paragon/variables";
+@import "@edx/paragon/scss/core/core";
+@import "@edx/brand/paragon/overrides";
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
 @import "./components/course/styles/CourseHeader";
 @import "./components/course/styles/CourseSidebar";
-@import "./components/dashboard/main-content/course-enrollments/course-cards/email-settings/styles/EmailSettingsModal";
 @import "./components/dashboard/main-content/course-enrollments/course-cards/styles/CourseCard";
 @import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
 @import "./components/dashboard/sidebar/offers/styles/Offer";
 @import "./components/dashboard/sidebar/styles/SidebarCard";
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
 @import "./components/search/styles/FacetList";
-@import "components/search/styles/SearchCourseCard";
-@import "components/search/styles/SearchResults";
-@import "components/search/styles/MobileSearchFilters";
-@import "components/site-header/styles/Header";
+@import "./components/search/styles/SearchCourseCard";
+@import "./components/search/styles/SearchResults";
+@import "./components/search/styles/MobileSearchFilters";
+@import "./components/site-header/styles/Header";
+@import "./components/preview-expand/styles/PreviewExpand";
