--- a/src/components/dashboard/main-content/course-enrollments/course-cards/styles/_CourseCard.scss
+++ b/src/components/dashboard/main-content/course-enrollments/course-cards/styles/_CourseCard.scss
@@ -1,4 +1,4 @@
-.course {
+.dashboard-course-card {
   @extend .position-relative;
 
   &:first-child {
@@ -10,37 +10,6 @@
     @extend .mb-0;
   }
 
-  &.is-micromasters {
-    min-height: 170px;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-image: url('../images/mm-badge.svg');
-      background-position: right center;
-      background-repeat: no-repeat;
-      opacity: 0.05;
-      z-index: 0;
-    }
-
-    @include media-breakpoint-down(sm) {
-      &::before {
-        background-position: right bottom;
-      }
-    }
-  }
-
-  .course-title > a {
-    @extend .h4;
-    @extend .m-0;
-    @extend .text-dark;
-    text-decoration: none;
-  }
-
   .notifications {
     li:last-child {
       .notification {
@@ -49,13 +18,8 @@
     }
 
     .notification {
-      background: #f4f7ff;
-      border-color: #d3daf0;
+      background: $info-100;
     }
-  }
-
-  .btn-outline-primary {
-    background-color: $white;
   }
 
   @include media-breakpoint-down(xs) {
