fix: retain image proportion with a max-height on partner logo

--- a/src/components/search/styles/_SearchCourseCard.scss
+++ b/src/components/search/styles/_SearchCourseCard.scss
@@ -36,8 +36,8 @@
     box-shadow: $box-shadow-sm;
 
     .partner-logo {
-      width: 90px;
-      height: auto;
+      width: auto;
+      max-height: 45px;
     }
   }
 
