--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 @import "@edx/brand/paragon/variables";
 @import "@edx/paragon/scss/core/core";
 @import "@edx/brand/paragon/overrides";
+@import "~@edx/frontend-enterprise";
+
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
@@ -13,9 +15,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/dashboard/sidebar/offers/styles/Offer";
 @import "./components/dashboard/sidebar/styles/SidebarCard";
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
-@import "./components/search/styles/FacetList";
 @import "./components/search/styles/SearchCourseCard";
 @import "./components/search/styles/SearchResults";
-@import "./components/search/styles/MobileSearchFilters";
 @import "./components/site-header/styles/Header";
 @import "./components/preview-expand/styles/PreviewExpand";
