Dispaly skills in course header
added tests

fixed errors

improved test case

incorporated feedback

separated test cases

fixed-lint-errors

incorporated more feedback

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/course/enrollment/styles/EnrollButton";
 @import "./components/course/styles/CourseHeader";
 @import "./components/course/styles/CourseSidebar";
+@import "./components/course/styles/CourseSkills";
 @import "./components/dashboard/main-content/course-enrollments/course-cards/styles/CourseCard";
 @import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
 @import "./components/dashboard/sidebar/offers/styles/Offer";
