feat: styles for typeahead dropdown

--- a/src/components/search/styles/_MobileSearchFilters.scss
+++ b/src/components/search/styles/_MobileSearchFilters.scss
@@ -48,7 +48,7 @@
       border: none;
     }
 
-    .dropdown-menu {
+    .dropdown-menu, .typeahead-dropdown-menu-scrollable-items {
       position: relative;
       width: 100%;
       box-shadow: none;
