--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
 @import "@edx/brand/paragon/fonts";
 @import "@edx/brand/paragon/variables";
 @import "@edx/paragon/scss/core/core";
-// frontend-enterprise must come before the paragon overrides for correct styling
-@import "~@edx/frontend-enterprise";
+// frontend-enterprise-* imports must come before the paragon overrides for correct styling
+@import "~@edx/frontend-enterprise-catalog-search";
 @import "@edx/brand/paragon/overrides";
 
 $fa-font-path: "~font-awesome/fonts";
