--- a/src/index.scss
+++ b/src/index.scss
@@ -18,5 +18,6 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/dashboard/sidebar/styles/SidebarCard";
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
 @import "./components/search/styles/";
+@import "./components/skills-quiz/styles/";
 @import "./components/site-header/styles/Header";
 @import "./components/preview-expand/styles/PreviewExpand";
