feat: Select Job card to show courses

--- a/src/components/skills-quiz/styles/_SearchResults.scss
+++ b/src/components/skills-quiz/styles/_SearchResults.scss
@@ -7,3 +7,12 @@
     @extend .mb-4;
   }
 }
+.select-job-results {
+  .pgn__form-radio{
+    float: right;
+  }
+  .ais-Hits-list {
+    list-style: none;
+    padding: 0;
+  }
+}
