--- a/src/components/skills-quiz/styles/_SearchResults.scss
+++ b/src/components/skills-quiz/styles/_SearchResults.scss
@@ -1,10 +1,23 @@
-.search-results {
+.skills-quiz-search-results {
+  .skeleton-course-card,
   .skeleton-job-card {
     @extend .col-12;
     @extend .col-sm-6;
     @extend .col-md-4;
     @extend .col-lg-3;
     @extend .mb-4;
+  }
+
+  .hits-results {
+    .ais-Hits-item {
+      width: 325px;
+      padding: 10px;
+    }
+    .ais-Hits-list {
+      @extend .row;
+      list-style: none;
+      padding: 0;
+    }
   }
 }
 .select-job-results {
