feat: Replace skills data with jobs data in SearchJobCards skill quiz component
fixed failing tests and code refactoring

fixed failing tests

incorporated feedback

only show 3 cards

fixed lint failure

--- a/src/components/skills-quiz/styles/_SearchJobCard.scss
+++ b/src/components/skills-quiz/styles/_SearchJobCard.scss
@@ -1,5 +1,11 @@
 .search-job-card {
   .card {
     box-shadow: $box-shadow;
+    width: 325px;
+    padding: 5px;
   }
+
+ .medium-font {
+    font-size: medium;
+ }
 }
