feat: Adding Skills Quiz button on course search page

--- a/src/components/enterprise-banner/styles/EnterpriseBanner.scss
+++ b/src/components/enterprise-banner/styles/EnterpriseBanner.scss
@@ -3,4 +3,11 @@
     border-left-width: 15px;
     border-left-style: solid;
   }
+  .banner-content{
+    justify-content: space-between;
+  }
+  .skills-quiz-btn{
+    margin: 1%;
+    height: max-content;
+  }
 }
