fix: resolved issues raised in comments

--- a/src/components/program/styles/_programFAQ.scss
+++ b/src/components/program/styles/_programFAQ.scss
@@ -2,6 +2,9 @@
 @import "@edx/paragon/scss/core/core";
 @import "@edx/brand/paragon/overrides";
 
+.program-section-heading {
+  color: #001b1e;
+}
 .collapsible {
   margin-bottom: 1.3rem;
   border-radius: .3rem !important;
