--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/course/enrollment/styles/EnrollButton";
 @import "./components/course/styles/CourseHeader";
 @import "./components/course/styles/CourseSidebar";
+@import "./components/course/styles/ProgramSidebar";
 @import "./components/course/styles/CourseSkills";
 @import "./components/dashboard/main-content/course-enrollments/course-cards/styles/CourseCard";
 @import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
