--- a/src/components/search/styles/_SearchContentCard.scss
+++ b/src/components/search/styles/_SearchContentCard.scss
@@ -1,4 +1,5 @@
-.search-course-card {
+.search-course-card,
+.search-program-card {
   a {
     color: $gray-700;
     text-decoration: none;
@@ -49,5 +50,11 @@
 
   .card-footer {
     font-size: 0.75rem;
+
+    .badge-text {
+      font-family: $font-family-monospace;
+      font-size: 0.75rem;
+      font-weight: 400;
+    }
   }
 }
