--- a/src/components/program/styles/_programDetail.scss
+++ b/src/components/program/styles/_programDetail.scss
@@ -15,5 +15,18 @@
       flex-direction: column;
       justify-content: space-between;
     }
+    .header-breadcrumbs {
+      font-size: .75rem;
+    }
+    .link-muted {
+      color: #00262b;
+      font-size: .875rem;
+      font-weight: 400;
+      line-height: 1.5rem;
+    }
+    .list-inline-item:not(:last-child) {
+      margin-right: 0.2rem;
+    }
+
   }
 }
