refactor: Show N/A if labor market data is not available

--- a/src/components/skills-quiz/styles/SkillsQuizDropdowns.scss
+++ b/src/components/skills-quiz/styles/SkillsQuizDropdowns.scss
@@ -21,3 +21,9 @@
   object-fit: cover;
   object-position: right top;
 }
+.pgn__form-control-set{
+  flex-direction: row;
+}
+.pgn__form-control-set-inline{
+  align-items: unset;
+}
