fix: create reusable ErrorPage component and update tests

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/skills-quiz/styles/";
 @import "./components/site-header/styles/Header";
 @import "./components/preview-expand/styles/PreviewExpand";
+@import "./components/error-page/styles/ErrorPage";
