feat: added new step to show courses grouped with skills user selected and job skills

--- a/src/components/skills-quiz/styles/_SearchContentCard.scss
+++ b/src/components/skills-quiz/styles/_SearchContentCard.scss
@@ -81,3 +81,14 @@
  flex-direction: row;
  column-gap: 1.0rem;
 }
+
+.more-courses-link {
+  float: right;
+  align-self: center;
+  text-decoration: underline;
+}
+
+.skills-badge {
+  margin-bottom: 30px;
+}
+
