style: make close button white and fix height of header

--- a/src/components/skills-quiz/styles/_SkillsQuizHeader.scss
+++ b/src/components/skills-quiz/styles/_SkillsQuizHeader.scss
@@ -1,3 +1,13 @@
+.bg-img{
+  height:18vw;
+}
+
+.skills-quiz-modal{
+  .pgn__modal-close-button{
+    color: #ffffff !important;
+ }
+}
+
 .vertical-line{
   border-left: 7px solid #D23228;
   transform: rotate(13deg);
