feat: Create Header and Sidebar for Program Progress Page
incorporated feedback and test cases

fix failing test

--- a/src/components/program-progress/styles/index.scss
+++ b/src/components/program-progress/styles/index.scss
@@ -1,1 +1,4 @@
-@import "src/components/program-progress/styles/ProgramListingCard";
+@import "./ProgramListingCard";
+@import "./ProgramProgressHeader";
+@import "./ProgramProgressSidebar";
+@import "./ProgramProgressCircle";
