--- a/src/index.scss
+++ b/src/index.scss
@@ -23,3 +23,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/preview-expand/styles/PreviewExpand";
 @import "./components/error-page/styles/ErrorPage";
 @import "./components/pathway/styles";
+@import "./components/program-progress/styles";
