--- a/src/components/program-progress/styles/index.scss
+++ b/src/components/program-progress/styles/index.scss
@@ -1,3 +1,4 @@
+@import "@edx/paragon/scss/core/core";
 @import "./ProgramListingCard";
 @import "./ProgramProgressHeader";
 @import "./ProgramProgressSidebar";
