--- a/src/components/program-progress/styles/index.scss
+++ b/src/components/program-progress/styles/index.scss
@@ -3,3 +3,4 @@
 @import "./ProgramProgressHeader";
 @import "./ProgramProgressSidebar";
 @import "./ProgramProgressCircle";
+@import "./ProgramProgressCourses";
