--- a/src/components/program-progress/styles/_ProgramProgressHeader.scss
+++ b/src/components/program-progress/styles/_ProgramProgressHeader.scss
@@ -13,18 +13,20 @@ $btn-color-primary: rgba(6, 86, 131, 100) !default;
     font-family: 'Open Sans';
     font-weight: normal;
     flex-wrap: wrap;
-    padding: 40px 10px 35px;
+    padding-top: 40px;
+    padding-bottom: 35px;
+    margin-bottom: 40px;
 
     @include media-breakpoint-up(md) {
       padding: {
-        left: 30px;
+        left: 10px;
         right: 30px;
       }
     }
 
     @media (min-width: map-get($container-max-widths, xl)) {
       padding: {
-        left: 30px;
+        left: 10px;
         right: 30px;
       }
     }
