refactor: Design changes for program progress page sidebar

--- a/src/components/program-progress/styles/_ProgramProgressCircle.scss
+++ b/src/components/program-progress/styles/_ProgramProgressCircle.scss
@@ -67,3 +67,6 @@ $bp-screen-md: 768px !default;
     stroke: $progress-incomplete-color;
   }
 }
+.program-sidebar-circle{
+  padding-left: 30px;
+}
