feat: Show Course Recommendations in Course About Page
fixed utility and added new line

added tests and handled some edge cases

incorporated feedback

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,8 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/course/styles/CourseSidebar";
 @import "./components/course/styles/ProgramSidebar";
 @import "./components/course/styles/CourseSkills";
+@import "./components/course/styles/CourseRecommendations";
+@import "./components/course/styles/CourseRecommendationCard";
 @import "./components/dashboard/main-content/course-enrollments/course-cards/styles/CourseCard";
 @import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
 @import "./components/dashboard/sidebar/offers/styles/Offer";
