--- a/src/components/program-progress/styles/_ProgramProgressCircle.scss
+++ b/src/components/program-progress/styles/_ProgramProgressCircle.scss
@@ -20,6 +20,7 @@ $bp-screen-md: 768px !default;
   margin-left:40px;
   color: $progress-title-color;
   margin-bottom: 0;
+  text-align: center;
   font: {
     size: 1.1em;
     weight: 700;
@@ -28,7 +29,7 @@ $bp-screen-md: 768px !default;
 
 .progress-circle-wrapper {
   position: relative;
-  margin-top: -20px;
+  margin: auto;
   width: 300px;
   height: 300px;
 
@@ -67,6 +68,4 @@ $bp-screen-md: 768px !default;
     stroke: $progress-incomplete-color;
   }
 }
-.program-sidebar-circle{
-  padding-left: 30px;
-}
+
