style: change style of pathway modal banner image

--- a/src/components/pathway/styles/_PathwayModal.scss
+++ b/src/components/pathway/styles/_PathwayModal.scss
@@ -4,4 +4,9 @@
     background-color: white !important;
     color: $primary-500 !important;
   }
+  .pathway-bg-img{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
