--- a/src/components/pathway/styles/_SearchContentCard.scss
+++ b/src/components/pathway/styles/_SearchContentCard.scss
@@ -7,92 +7,17 @@
     &:focus {
       color: $gray-700;
       text-decoration: none;
-
-      .card {
-        box-shadow: $box-shadow-lg;
-      }
     }
   }
 
-  .card {
-    height: 300px;
-    box-shadow: $box-shadow;
-    overflow: hidden;
-  }
-
-  @media only screen and (min-width: 760px){
-    .card{
-      height: 320px;
-    }
-  }
-
-  @media only screen and (min-width: 1100px){
-    .card{
-      height: 300px;
-    }
-  }
-
-  .card-body {
+  .pgn__card-section {
     background-color: #00262b;
   }
 
-  .card-title {
-    color: white;
-  }
-
-  .card-img-top {
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
-    border: none;
-  }
-
-  .partner-logo-wrapper {
-    padding: 5px;
-    position: absolute;
-    top: 54px;
-    left: 20px;
-    background: $white;
-    border-radius: 3px;
-    box-shadow: $box-shadow-sm;
-
-    .partner-logo {
-      width: auto;
-      max-height: 45px;
+  .pgn__card-header {
+    background-color: #00262b;
+    .pgn__card-header-title {
+      color: white;
     }
   }
-
-  .card-body {
-    .partner {
-      font-size: $font-size-sm;
-    }
-  }
-
-  .card-footer {
-    font-size: 0.75rem;
-
-    .badge-text {
-      font-family: $font-family-monospace;
-      font-size: 0.75rem;
-      font-weight: 400;
-    }
-  }
-
-  .pathway-skill-names {
-    margin-top: 24px;
-    width: 100%;
-    flex-wrap: wrap;
-    flex-direction: row;
-  }
-
-  .pathway-badge {
-    margin-right: 12px;
-    margin-bottom: 12px;
-    font-weight: 400;
-  }
-}
-
-.skill-quiz-pathway-card {
-  height: 340px;
-  width: 312px;
 }
