fix: fix some problems with Paragon 19 cards

--- a/src/components/pathway/styles/_SearchContentCard.scss
+++ b/src/components/pathway/styles/_SearchContentCard.scss
@@ -11,11 +11,11 @@
   }
 
   .pgn__card-section {
-    background-color: #00262b;
+    background-color: $primary;
   }
 
   .pgn__card-header {
-    background-color: #00262b;
+    background-color: $primary;
     .pgn__card-header-title {
       color: white;
     }
