feat: add alert banner for low enterprise offer balance

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/error-page/styles/ErrorPage";
 @import "./components/pathway/styles";
 @import "./components/program-progress/styles";
+@import "./components/enterprise-user-subsidy/enterprise-offers/styles";
