feat: fetch course title on Exec Ed (2U) enrollment info page

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,8 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
+@import 'react-loading-skeleton/dist/skeleton.css';
+
 @import "./components/course/styles/CourseHeader";
 @import "./components/course/styles/CourseSidebar";
 @import "./components/course/styles/ProgramSidebar";
