[DP-307] Connect learning path and catalog API

--- a/src/components/dashboard/styles/_Dashboard.scss
+++ b/src/components/dashboard/styles/_Dashboard.scss
@@ -8,6 +8,11 @@
     & + & {
       margin-top: 40px;
     }
+
+    hr {
+      border-top-color: $light-400;
+      margin-bottom: 24px;
+    }
   }
 
   &-panel-header-title {
