[DP-304] Create overall page layout on dashboard (#30)
* [DP-304] Create overall page layout on dashboard

* Include scss overrides from dojo-admin-brand

* Remove helper render function on the Dashboard

* Update the package-lock.json

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,11 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
+@import "@reustleco/dojo-admin-brand/paragon/fonts";
+@import "@reustleco/dojo-admin-brand/paragon/variables";
+@import "@reustleco/dojo-admin-brand/paragon/mixins";
+@import "@reustleco/dojo-admin-brand/paragon/overrides";
+
 @import "./components/course/styles/CourseHeader";
 @import "./components/course/styles/CourseSidebar";
 @import "./components/course/styles/ProgramSidebar";
@@ -16,9 +21,14 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
 @import "./components/dashboard/sidebar/styles/SidebarCard";
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
+@import "./components/dashboard/styles/Dashboard";
 @import "./components/search/styles/";
 @import "./components/skills-quiz/styles/";
 @import "./components/site-header/styles/Header";
 @import "./components/preview-expand/styles/PreviewExpand";
 @import "./components/error-page/styles/ErrorPage";
 @import "./components/pathway/styles";
+
+body {
+  background-color: $light-200;
+}
